assets/css/app.css
html {
    scroll-behavior: smooth;
}

footer a,
header svg,
h1 {
    color: #3F4256;
}

main {
    display: flex;
    justify-content: space-around;
}
.card {
    width: 20%;
    margin-top: 2rem;
    margin-bottom: 5rem;
    box-shadow: 5px 5px 10px 2px #3F4256;
}

h1 {
    margin-top: 2rem;
    text-align: center;
}

.carousel-item img {
    width: 100%;
    height: 700px;
}

